@@ -168,6 +168,7 @@ com_fft(wordlist *wl)
     }
     free_pnode_o(first_name); /* h_vogt 081206 */
     if (!ngood) {
+       tfree(win);
        return;
     }
  
@@ -239,7 +240,8 @@ com_fft(wordlist *wl)
     tfree(imagd);
     
     tfree(tdvec);
-    tfree(fdvec);    
+    tfree(fdvec);
+    tfree(win);    
 }
 
 
